--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
-    "version": "2.0.0",
-    "description": "Launcher Mincraft pour le serveur Selvania",
+    "name": "Voltium-Launcheur",
+    "preductname": "Voltium Launcher",
+    "version": "1.0.0",
+    "description": "Launcher Mincraft pour le serveur Voltium",
     "main": "src/app.js",
     "author": {
-        "name": "luuxis, Inc.",
-        "email": "contact@luuxis.fr",
-        "url": "https://github.com/luuxis"
+        "name": "luuxius, Voltium, Inc.",
+        "email": "contact@luuxius.fr",
+        "url": "https://github.com/luuxius"
     },
-    "url": "http://launcher.luuxis.fr/launcherSelvania",
+    "url": "https://zxt-structure.fr/files_launcher/",
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
         "build": "node build.js --obf=false --build=platform",
-        "icon": "node build.js --icon=https://raw.githubusercontent.com/luuxis/Selvania-Launcher/master/src/assets/images/icon.png"
+        "icon": "node build.js --icon=https://i.imgur.com/rX620Qt.png"
     },
     "license": "CCANC",
     "nodemonConfig": {
@@ -39,6 +39,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/FenixRiserr/Voltium-Launcher.git"
     }
 }
