--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Voltium-Launcheur",
     "preductname": "Voltium Launcher",
-    "version": "5.0.0",
+    "version": "6.0.0",
     "description": "Launcher Mincraft pour le serveur Voltium",
     "main": "src/app.js",
     "author": {
@@ -14,7 +14,7 @@
         "start": "cross-env-shell NODE_ENV=dev electron .",
         "dev": "cross-env-shell DEV_TOOL=open nodemon --exec npm start",
         "build": "node build.js --obf=false --build=platform",
-        "icon": "node build.js --icon=https://i.imgur.com/rX620Qt.png"
+        "icon": "node build.js --icon=https://i.imgur.com/lIqrxAG.jpeg"
     },
     "license": "CCANC",
     "nodemonConfig": {
